getting the 3 domiment frecuencies

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         ).innerText = `start: ${cue.start}`;
                                         document.getElementById(
                                             "frequency"
-                                        ).innerText = `frequency: ${cue.frequency}`;
+                                        ).innerText = `frequency1: ${cue.frequencies[0]} <br> frequency2: ${cue.frequencies[1]} <br> frequency3: ${cue.frequencies[2]}`;
                                     }
                                 });
                             }, 1000 / 60); // Update approximately 60 times per second
